force-app/main/default/objects/Portfolio__c/fields/CreationDate__c.field-meta.xml
<CustomField>
    <fullName>CreationDate__c</fullName>
    <description>Date field for the date the portfolio was created</description>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>