force-app/main/default/objects/Portfolio__c/fields/FinancialObjectives__c.field-meta.xml
<CustomField>
    <fullName>FinancialObjectives__c</fullName>
    <description>Long text field to describe the objectives associated with the portfolio.</description>
    <label>Financial Objectives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>