force-app/main/default/objects/Portfolio__c/fields/PortfolioNumber__c.field-meta.xml
<CustomField>
    <fullName>PortfolioNumber__c</fullName>
    <description>Identify the Portfolio number</description>
    <label>Portfolio Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>