force-app/main/default/objects/Portfolio__c/fields/TotalInvested__c.field-meta.xml
<CustomField>
    <fullName>TotalInvested__c</fullName>
    <description>Total Invested in the Portfolio</description>
    <label>Total Invested</label>
    <summarizedField>Position__c.TotalInvested__c</summarizedField>
    <summaryForeignKey>Position__c.Portfolio__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>