force-app/main/default/objects/Portfolio__c/recordTypes/CashAccount.recordType-meta.xml
<RecordType>
    <fullName>CashAccount</fullName>
    <active>true</active>
    <description>Portfolio only for cash account that are not invest in any way</description>
    <label>Cash Account</label>
</RecordType>