force-app/main/default/objects/Portfolio__c/recordTypes/Stocks.recordType-meta.xml
<RecordType>
    <fullName>Stocks</fullName>
    <active>true</active>
    <description>Stocks Portoflio represent a Portfolio without specific financial tool</description>
    <label>Stocks</label>
</RecordType>