force-app/main/default/objects/Portfolio__c/recordTypes/TFSA.recordType-meta.xml
<RecordType>
    <fullName>TFSA</fullName>
    <active>true</active>
    <description>Represent a Portfolio on the TFSA financial tool</description>
    <label>TFSA</label>
</RecordType>